--- a/views/addNewRecipe.handlebars
+++ b/views/addNewRecipe.handlebars
@@ -4,6 +4,7 @@
   </div>
 </div>
 
+{{! Creating new recipe}}
 <div class="row mt-4">
   <div class="col-md-6">
     <h3>Create a New Recipe:</h3>
@@ -27,6 +28,7 @@
     </form>
   </div>
 
+{{! Display of existing recipes}}
   {{#if recipes.length}}
   <div class="col-md-6 recipe-list">
     <h3>Your Recipes:</h3>
