added layout for ingredients

--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -44,5 +44,16 @@
         </div>
       </div>
     </div>
+    <hr class='mt-3' />
+    {{! ============================Ingredients========================== }}
+    <div
+      class='bg-light-subtle shadow-sm p-3 mb-5 bg-body-tertiary rounded col-12 col-sm-6'
+    >
+      <h4 class='px-3 mb-3'>Ingredients</h4>
+      <textarea
+        class='px-3 py-3 textarea resize-ta'
+      >{{recipe.ingredients}}</textarea>
+    </div>
+  </div>
 </div>
 <script src='/js/recipeDetails.js'></script>
