added layout for instructions

--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -54,6 +54,18 @@
         class='px-3 py-3 textarea resize-ta'
       >{{recipe.ingredients}}</textarea>
     </div>
+    {{! ============================Instructions========================== }}
+    <div
+      class='bg-light-subtle shadow-sm p-3 mb-5 bg-body-tertiary rounded col-12 col-sm-6'
+    >
+
+      <h4 class='px-3 mb-3'>Instructions</h4>
+      <textarea
+        class='px-3 py-3 textarea resize-ingredients'
+      >{{recipe.instructions}}</textarea>
+    </div>
+    {{! ============================Comment========================== }}
+
   </div>
 </div>
 <script src='/js/recipeDetails.js'></script>
