--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -35,7 +35,7 @@
                     class='fa-solid fa-heart'
                     style='color: #9c162a;'
                   ></i>
-                  10
+                  {{recipe.likes}}
                   <span class='visually-hidden'>unread messages</span>
                 </span>
               </a>
