updated the code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,65 @@
+body {
+    font-family: 'Times New Roman', Times, serif;
+    margin: 0;
+    min-height: 100vh;
+}
+
+form {
+    /* width: 100%; */
+}
+
+form .form-group {
+    display: block;
+    width: 100%;
+    margin: 0.625rem 0;
+}
+
+form .form-input,
+form .form-textarea {
+    display: block;
+}
+
+form .form-input {
+    width: 98%;
+    padding: 0.75rem;
+    color: #1a1a1a;
+    background-color: #ffffff;
+    margin: 0.625rem 0;
+    font-size: 1.2rem;
+    border: 1px solid #484848;
+    border-radius: 0.3rem;
+}
+
+form .form-input.form-input-squared {
+    border-radius: 0;
+}
+
+.btn {
+    text-align: center;
+    display: inline-block;
+    padding: 0.5rem 1.2rem;
+    margin: 0;
+    text-decoration: none;
+    font-size: 1rem;
+    border-radius: 0.3rem;
+    border: 1px solid transparent;
+    outline: none;
+    color: #1a1a1a;
+    background-color: #aeaeae;
+    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
+
+.btn.btn-primary {
+    background-color: #2d3e50;
+    color: #d9e9e8;
+}
+
+.btn:hover {
+    background-color: #cecece;
+}
+
 .card,
 .comment-form {
-    /* margin: 20px; */
-    /* flex: 0 1 100%; */
-    /* border: 7px double var(--dark); */
-    /* border-radius: 10px; */
-    /* background-color: var(--secondary); */
-    /* color: var(--dark); */
     width: 100%;
 }
 
@@ -17,7 +71,6 @@
 
 #text-comment {
     height: 100px;
-    /* background-color: var(--light); */
 }
 
 .recipe-textarea {
@@ -26,7 +79,6 @@
     outline: none;
     border: none;
     resize: none;
-    /* height: calc(100% - 50px); */
     padding: 20px 15px 100px 15px;
     line-height: 20px;
 
@@ -43,12 +95,12 @@
 
 }
 
-a:hover {
+#span-like :hover {
     text-decoration: none;
     cursor: pointer;
 }
 
 #span-like {
     padding: 10px;
-    background-color: var(--light);
+    background-color: #b5c2b5;
 }
