--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -88,7 +88,7 @@
       <form class='form comment-form'>
         <div class='form-group col-12 col-sm-12'>
           <input
-            class='form-input'
+            class='form-input mx-4'
             type='textArea'
             id='text-comment'
             placeholder='Comment'
