joined the signup and login together, and linked to js file. Also changed card on homepage

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,7 +104,7 @@ form .form-input.form-input-squared {
 #span-like {
     padding: 10px;
     background-color: #b5c2b5;
-
+}
 *::before,
 *::after,
 * {
