--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -21,13 +21,13 @@
                       <a class="nav-link" href="#">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="#">Login/ Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log Out</a>
+                        <a class="nav-link btn btn-primary" href="#">Log Out</a>
                     </li>
                    
     </header>
