--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
         Invalid email or password
     </div>
 
-    <form>
+    <form class="login">
         <div class="form-group">
             <label for="email">Email</label>
             <input type="text" class="form-control" id="email" placeholder="jane.doe@email.com">
@@ -25,6 +25,47 @@
     </form>
 </div>
 
+<div class="mt-4 mx-4 border-top border-black border-3 ">
+  <h2 class="display-4">Register</h2>
+
+  <div class="alert alert-danger d-none" id="error_banner">
+      <button type="button" class="close" data-dismiss="alert" id="close_error_banner" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+      <ul class="error-list mb-0"></ul>
+  </div>
+
+  <form class="signUp">
+      <div class="form-group">
+          <label for="firstName">First name</label>
+          <input type="text" class="form-control" id="firstName" placeholder="John">
+      </div>
+      
+      <div class="form-group">
+          <label for="lastName">Last name</label>
+          <input type="text" class="form-control" id="lastName" placeholder="Smith">
+      </div>
+
+
+      <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" placeholder="john.smith@email.com">
+      </div>
+
+      <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password">
+          <small class="form-text text-muted">Password should be 8 characters long</small>
+      </div>
+
+      <div class="form-group">
+          <label>About me</label>
+          <textarea class="form-control" placeholder="Something about me" rows="10"></textarea>
+      </div>
+
+      <button type="submit" class="btn btn-primary mt-2">Submit</button>
+  </form>
+</div>
 
 
 {{> footer}}
