--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -23,12 +23,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login/ Register</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
+                    {{#if Logged_in}}
                     <li class="nav-item">
                         <a class="nav-link btn btn-primary" href="#">Log Out</a>
                     </li>
+                    {{/if}}
                    
     </header>
 </header>
