--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
@@ -104,26 +103,27 @@ form .form-input.form-input-squared {
 #span-like {
     padding: 10px;
     background-color: #b5c2b5;
+}
 
 *::before,
 *::after,
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1,
 h2,
 a {
-  font-family: "Staatliches", cursive;
+    font-family: "Staatliches", cursive;
 }
 
 li,
 p,
 h3 {
-  font-family: "Source Sans Pro", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
 }
 
-.background-homepage{
-  background-color:rgb(189, 189, 189);
+.background-homepage {
+    background-color: rgb(189, 189, 189);
 
 }
