updated seed data to include image paths and changed handlebar src path

--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -2,12 +2,11 @@
   <div class='row justify-content-evenly'>
     <div class='col-12 col-sm-12 px-0'>
       <div class='card border-light mb-3'>
+        {{! ============================Image ,description , user name, date and likes ========================== }}
         <div class='row g-0'>
           <div class='col-md-6'>
-
             <img
-              src='/images/recipe.jpg'
-              }}
+              src='{{recipe.imagePath}}'
               class='img-fluid rounded-start'
               alt='...'
             />
