as in branch title

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -18,10 +18,10 @@
                       <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Profile</a>
+                      <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login/ Register</a>
+                        <a class="nav-link" href="/login">Login/ Register</a>
                     </li>
                     {{#if Logged_in}}
                     <li class="nav-item">
