--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -37,15 +37,15 @@
 
   <form class="signUp">
       <div class="form-group">
-          <label for="firstName">First name</label>
+          <label for="firstName">Name</label>
           <input type="text" class="form-control" id="firstName" placeholder="John">
       </div>
-      
+      <!-- 
       <div class="form-group">
           <label for="lastName">Last name</label>
           <input type="text" class="form-control" id="lastName" placeholder="Smith">
       </div>
-
+-->
 
       <div class="form-group">
           <label for="email">Email</label>
@@ -57,12 +57,12 @@
           <input type="password" class="form-control" id="password">
           <small class="form-text text-muted">Password should be 8 characters long</small>
       </div>
-
+<!--
       <div class="form-group">
           <label>About me</label>
           <textarea class="form-control" placeholder="Something about me" rows="10"></textarea>
       </div>
-
+-->
       <button type="submit" class="btn btn-primary mt-2">Submit</button>
   </form>
 </div>
