--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,8 +31,10 @@
 
   <body>
 
-    <main class='container'>
+    <main class="background-homepage">
+      {{> nav}}
       {{{body}}}
+      {{> footer}}
     </main>
 
   </body>
