--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -2,7 +2,7 @@
        <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-              <img src="./images/attachment_95653835.jfif" alt="small logo" width="50" height="50">   
+              <img src="#" alt="small logo" width="50" height="50">   
               <a class="navbar-brand fw-bolder fs-2" href="#">Recipe Forum</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
                       <a class="nav-link" href="#">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login/ Register</a>
+                        <a class="nav-link" href="#">Login/ SignUp</a>
                     </li>
                     {{#if Logged_in}}
                     <li class="nav-item">
