--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,24 @@
-{{> nav}}
+
 
 {{#each recipes as |recipe|}}
-<button class="btn mx-auto mb-3 my-4" style="display: block; max-width: 650px; width: 100%; text-align: left;">
+<div>
+  <a href="#" class="feed rounded-4 mx-auto mb-3 my-4" style="display: block; max-width: 650px; width: 100%; text-align: left;">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="..." class="img-fluid rounded-start" alt="Pic of food">
     </div>
     <div class="col-md-8">
-      <div class="card-body">
+      <div class="card-body1">
         <h1 class="card-title">{{recipe.title}}</h1>
         <p class="card-text text-body-secondary">{{recipe.description}}</p>
       </div>
     </div>
   </div>
-</button>
+</a>
+</div>
+
+
 {{/each}}
 
     
 
-{{> footer}}
