--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-{{> nav }}
+
 
 <div class="mt-4 mx-4">
     <h2 class="display-4">Login</h2>
@@ -37,14 +37,10 @@
 
   <form class="signUp">
       <div class="form-group">
-          <label for="firstName">First name</label>
+          <label for="firstName">Name</label>
           <input type="text" class="form-control" id="firstName" placeholder="John">
       </div>
       
-      <div class="form-group">
-          <label for="lastName">Last name</label>
-          <input type="text" class="form-control" id="lastName" placeholder="Smith">
-      </div>
 
 
       <div class="form-group">
@@ -58,14 +54,9 @@
           <small class="form-text text-muted">Password should be 8 characters long</small>
       </div>
 
-      <div class="form-group">
-          <label>About me</label>
-          <textarea class="form-control" placeholder="Something about me" rows="10"></textarea>
-      </div>
 
       <button type="submit" class="btn btn-primary mt-2">Submit</button>
   </form>
 </div>
 
 
-{{> footer}}
