--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" id="password_login">
         </div>
 
         <button type="submit" class="btn btn-primary mt-3">Submit</button>
