--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -15,14 +15,14 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     {{#if logged_in}} 
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="#">Log Out</a>
+                        <button class="nav-link btn btn-primary" id="logout_btn">Log Out</button>
                     </li>
                     {{else}}
                     <li class="nav-item">
@@ -32,3 +32,4 @@
                    
     </header>
 </header>
+<script src='/js/logout.js'></script>
