--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,10 +2,10 @@
 
 {{#each recipes as |recipe|}}
 <div>
-  <a href="#" class="feed rounded-4 mx-auto mb-3 my-4" style="display: block; max-width: 650px; width: 100%; text-align: left;">
+  <a href="/recipe/{{recipe.id}}" class="feed rounded-4 mx-auto mb-3 my-4" style="display: block; max-width: 650px; width: 100%; text-align: left;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="Pic of food">
+      <img src="{{recipe.imagePath}}" class="img-fluid rounded-start" alt="Pic of food">
     </div>
     <div class="col-md-8">
       <div class="card-body1">
