--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -26,7 +26,7 @@
                     </li>
                     {{else}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login/ Register</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                     {{/if}}
                    
