--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,30 +1,31 @@
-  <div class="mt-4 mx-4">
-    <h1 class="text-center my-2">Welcome to your Profile</h1>
-    <p class="text-start mt-5 mb-4 fs-3">Your Recipes</p>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-        <div class="card h-100">
-            <img src="{{recipe.imagePath}}" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{recipe.title}}</h5>
-            <p class="card-text">{{recipe.description}}</p>
+<div class='mt-4 mx-4'>
+  <h1 class='text-center my-2'>Welcome to your Profile</h1>
+  <p class='text-start mt-5 mb-4 fs-3'>Your Recipes</p>
+  <div class='row row-cols-1 row-cols-md-3 g-4'>
+    <div class='col'>
+      <div class='card h-100'>
+        <img src='{{recipe.imagePath}}' class='card-img-top' alt='...' />
+        <div class='card-body'>
+          <h5 class='card-title'>{{recipe.title}}</h5>
+          <p class='card-text'>{{recipe.description}}</p>
         </div>
-        </div>
-        </div>
+      </div>
     </div>
-    <p class="text-start mt-5 mb-4 fs-3">Your Favourites</p>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-        <div class="card h-100">
-            <img src="{{recipe.imagePath}}" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{recipe.title}}</h5>
-            <p class="card-text">{{recipe.description}}</p>
+  </div>
+  <p class='text-start mt-5 mb-4 fs-3'>Your Favourites</p>
+  <div class='row row-cols-1 row-cols-md-3 g-4'>
+    <div class='col'>
+      <div class='card h-100'>
+        <img src='{{recipe.imagePath}}' class='card-img-top' alt='...' />
+        <div class='card-body'>
+          <h5 class='card-title'>{{recipe.title}}</h5>
+          <p class='card-text'>{{recipe.description}}</p>
         </div>
-        </div>
-        </div>
+      </div>
     </div>
-    <div class="mt-4">
-      <a class="btn btn-primary" href="#" role="button">+ Add New Recipe</a>
-    </div>
+  </div>
+  <div class='mt-4'>
+    <a class='btn btn-primary addNewRecipeBtn' role='button'>+ Add New Recipe</a>
+  </div>
 </div>
+<script src='/js/profile.js'></script>
