--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,60 +1,90 @@
+<div class='mt-4 mx-4'>
+  <h2 class='display-4'>Login</h2>
 
-
-<div class="mt-4 mx-4">
-    <h2 class="display-4">Login</h2>
-
-    <div class="alert alert-danger d-none" id="error_banner">
-        <button type="button" class="close" data-dismiss="alert" id="close_error_banner" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        Invalid email or password
-    </div>
-
-    <form class="login">
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" class="form-control" id="email_login" placeholder="jane.doe@email.com">
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password_login">
-        </div>
-
-        <button type="submit" class="btn btn-primary mt-3">Submit</button>
-    </form>
-</div>
-
-<div class="mt-4 mx-4 border-top border-black border-3 ">
-  <h2 class="display-4">Register</h2>
-
-  <div class="alert alert-danger d-none" id="error_banner">
-      <button type="button" class="close" data-dismiss="alert" id="close_error_banner" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-      </button>
-      <ul class="error-list mb-0"></ul>
+  <div class='alert alert-danger d-none' id='error_banner'>
+    <button
+      type='button'
+      class='close'
+      data-dismiss='alert'
+      id='close_error_banner'
+      aria-label='Close'
+    >
+      <span aria-hidden='true'>&times;</span>
+    </button>
+    Invalid email or password
   </div>
 
-  <form class="signUp">
-      <div class="form-group">
-          <label for="firstName">Name</label>
-          <input type="text" class="form-control" id="name_signup" placeholder="John">
-      </div>
+  <form class='login'>
+    <div class='form-group'>
+      <label for='email'>Email</label>
+      <input
+        type='text'
+        class='form-control'
+        id='email_login'
+        placeholder='jane.doe@email.com'
+      />
+    </div>
 
-      <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email_signup" placeholder="john.smith@email.com">
-      </div>
+    <div class='form-group'>
+      <label for='password'>Password</label>
+      <input type='password' class='form-control' id='password_login' />
+    </div>
 
-      <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password_signup">
-          <small class="form-text text-muted">Password should be 8 characters long</small>
-      </div>
+    <button
+      type='submit'
+      class='btn btn-primary mt-3 rounded-pill px-4 py-1'
+    >Submit</button>
+  </form>
+</div>
 
-      <button type="submit" class="btn btn-primary mt-2">Submit</button>
+<div class='mt-4 mx-4 border-top border-black border-3'>
+  <h2 class='display-4'>Register</h2>
+
+  <div class='alert alert-danger d-none' id='error_banner'>
+    <button
+      type='button'
+      class='close'
+      data-dismiss='alert'
+      id='close_error_banner'
+      aria-label='Close'
+    >
+      <span aria-hidden='true'>&times;</span>
+    </button>
+    <ul class='error-list mb-0'></ul>
+  </div>
+
+  <form class='signUp'>
+    <div class='form-group'>
+      <label for='firstName'>Name</label>
+      <input
+        type='text'
+        class='form-control'
+        id='name_signup'
+        placeholder='John'
+      />
+    </div>
+
+    <div class='form-group'>
+      <label for='email'>Email</label>
+      <input
+        type='email'
+        class='form-control'
+        id='email_signup'
+        placeholder='john.smith@email.com'
+      />
+    </div>
+
+    <div class='form-group'>
+      <label for='password'>Password</label>
+      <input type='password' class='form-control' id='password_signup' />
+      <small class='form-text text-muted'>Password should be 8 characters long</small>
+    </div>
+
+    <button
+      type='submit'
+      class='btn btn-primary mt-3 rounded-pill px-4 py-1'
+    >Submit</button>
   </form>
 </div>
 
 <script src='/js/login.js'></script>
-
