changed the style of logout button, linked the profile page to add new recipe

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,3 +163,16 @@ a.feed:focus {
     height: 504px;
     width: 604px;
 }
+
+.btn-no-style {
+    /* color: var(--light); */
+    background: none;
+    /* background-color: black; */
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    text-decoration: none;
+    /* font-size: 100%; */
+    transition: color 0.1s;
+    /* margin-left: 16px; */
+}
