--- a/views/addnewrecipe.handlebars
+++ b/views/addnewrecipe.handlebars
@@ -52,7 +52,12 @@
           class='form-control-file border'
         />
       </div>
-      <input type='submit' name='submitInfo' value='Submit' />
+      <input
+        type='submit'
+        name='submitInfo'
+        value='Submit'
+        class='btn btn-primary rounded-pill px-4 py-1'
+      />
     </form>
   </div>
 </div>
