--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -22,7 +22,7 @@
                     </li>
                     {{#if logged_in}} 
                     <li class="nav-item">
-                        <button class="nav-link btn btn-primary" id="logout_btn">Log Out</button>
+                        <button class="nav-link  btn-no-style" id="logout_btn">Log Out</button>
                     </li>
                     {{else}}
                     <li class="nav-item">
