--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,7 +25,10 @@
     </div>
   </div>
   <div class='mt-4'>
-    <a class='btn btn-primary addNewRecipeBtn' role='button'>+ Add New Recipe</a>
+    <a
+      class='btn btn-primary rounded-pill px-4 py-1 mb-4 addNewRecipeBtn'
+      role='button'
+    >+ Add New Recipe</a>
   </div>
 </div>
 <script src='/js/profile.js'></script>
