--- a/views/addnewrecipe.handlebars
+++ b/views/addnewrecipe.handlebars
@@ -44,7 +44,7 @@
         ></textarea>
       </div>
       <div class='form-group'>
-        <div class='preview-images'></div>
+        <div class='preview-images col-12 col-md-6'></div>
         <input
           type='file'
           name='file'
@@ -61,8 +61,8 @@
     </form>
   </div>
 </div>
-<script
+{{!-- <script
   src='https://stackpath.bootstrapcdn.com/bootstrap/5.3.1/js/bootstrap.bundle.min.js'
-></script>
+></script> --}}
 <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
 <script src='/js/addRecipe.js'></script>
