puting fixed narbar, and having the ability to hide and show fav recipe and your recipes by clicking

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,3 +188,15 @@ a.feed:focus {
         width: 300px; */
     }
 }
+
+.hidden>div {
+	display:none;
+}
+
+.visible>div {
+	display:block;
+}
+
+.main-margin{
+    margin-top: 75px;
+}
