--- a/views/addnewrecipe.handlebars
+++ b/views/addnewrecipe.handlebars
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class='container main-margin'>
   <div class='row justify-content-evenly'>
     <form
       id='form-recipe'
