--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class='mt-4 mx-4'>
+<div class='main-margin'>
   <h2 class='display-4'>Login</h2>
 
   <div class='alert alert-danger d-none' id='error_banner'>
@@ -21,7 +21,6 @@
         type='text'
         class='form-control'
         id='email_login'
-        placeholder='jane.doe@email.com'
       />
     </div>
 
@@ -60,7 +59,6 @@
         type='text'
         class='form-control'
         id='name_signup'
-        placeholder='John'
       />
     </div>
 
@@ -70,7 +68,6 @@
         type='email'
         class='form-control'
         id='email_signup'
-        placeholder='john.smith@email.com'
       />
     </div>
 
