--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -9,7 +9,7 @@
       </div>
 
       <div>
-          <ul class="list-unstyled d-flex justify-content-center">
+          <ul class="list-unstyled d-flex justify-content-center flex-wrap">
               <li class="mx-3">
                 Andrei Ribeiro Wenceslau                  
                 <a href="https://github.com/andrei-ribeiro-wenceslau" class="ml-2">
