--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,6 +1,5 @@
 <header>
-       <header>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
               <img src="#" alt="small logo" width="50" height="50">   
               <a class="navbar-brand fw-bolder fs-2" href="#">Recipe Forum</a>
@@ -30,6 +29,6 @@
                     </li>
                     {{/if}}
                    
-    </header>
+    
 </header>
 <script src='/js/logout.js'></script>
