--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,17 @@
-<div class='mt-4 mx-4'>
-  <h1 class='text-center my-2'>Welcome to your Profile</h1>
-  <p class='text-start mt-5 mb-4 fs-3'>Your Recipes</p>
+<div class="main-margin">
+
+<h2 class="text-center">Welcome to your Profile</h2>
+
+    <div class="text-container">
+    <button class="btn btn-primary text-start mt-5 mb-4 fs-3">Your Recipes</button>
+
+
+    <div>
+
+    
   <div class='row row-cols-1 row-cols-md-3 g-4'>
-    <div class='col'>
+  <div class='col'>
+    <a href="/recipe/{{recipe.id}}" style="text-decoration: none; color: inherit;"> <!-- Add this line -->
       <div class='card h-100'>
         <img src='{{recipe.imagePath}}' class='card-img-top' alt='...' />
         <div class='card-body'>
@@ -10,11 +19,26 @@
           <p class='card-text'>{{recipe.description}}</p>
         </div>
       </div>
-    </div>
+    </a> 
   </div>
-  <p class='text-start mt-5 mb-4 fs-3'>Your Favourites</p>
+  </div>
+  
+  
+  </div>
+    
+  </div>
+ 
+
+  <div class="text-container">
+    <button class="btn btn-primary text-start mt-5 mb-4 fs-3">Your Favourites</button>
+
+
+    <div>
+
+      {{#each user.recipes as |recipe|}}
   <div class='row row-cols-1 row-cols-md-3 g-4'>
-    <div class='col'>
+  <div class='col'>
+    <a href="/recipe/{{recipe.id}}" style="text-decoration: none; color: inherit;"> <!-- Add this line -->
       <div class='card h-100'>
         <img src='{{recipe.imagePath}}' class='card-img-top' alt='...' />
         <div class='card-body'>
@@ -22,8 +46,16 @@
           <p class='card-text'>{{recipe.description}}</p>
         </div>
       </div>
-    </div>
+    </a> 
   </div>
+  </div>
+  {{/each}}
+  
+  </div>
+    
+  </div>
+ 
+
   <div class='mt-4'>
     <a
       class='btn btn-primary rounded-pill px-4 py-1 mb-4 addNewRecipeBtn'
