--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<div class='mt-4 mx-4'>
+<div id='div-content' class='mt-4 mx-4'>
   <h1 class='text-center my-2'>Welcome to your Profile</h1>
   <p class='text-start mt-5 mb-4 fs-3'>Your Recipes</p>
   {{#each createdRecipes as |recipe|}}
