--- a/views/addnewrecipe.handlebars
+++ b/views/addnewrecipe.handlebars
@@ -1,4 +1,4 @@
-<div class='container main-margin'>
+<div id='div-content' class='container main-margin'>
   <div class='row justify-content-evenly'>
     <form
       id='form-recipe'
@@ -61,8 +61,8 @@
     </form>
   </div>
 </div>
-{{!-- <script
+{{! <script
   src='https://stackpath.bootstrapcdn.com/bootstrap/5.3.1/js/bootstrap.bundle.min.js'
-></script> --}}
+></script> }}
 <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
 <script src='/js/addRecipe.js'></script>
