--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class='main-margin'>
+<div id='div-content' class='main-margin'>
   <h2 class='display-4'>Login</h2>
 
   <div class='alert alert-danger d-none' id='error_banner'>
@@ -17,11 +17,7 @@
   <form class='login'>
     <div class='form-group'>
       <label for='email'>Email</label>
-      <input
-        type='text'
-        class='form-control'
-        id='email_login'
-      />
+      <input type='text' class='form-control' id='email_login' />
     </div>
 
     <div class='form-group'>
@@ -36,7 +32,7 @@
   </form>
 </div>
 
-<div class='mt-4 mx-4 border-top border-black border-3'>
+<div id='div-content' class='mt-4 mx-4 border-top border-black border-3'>
   <h2 class='display-4'>Register</h2>
 
   <div class='alert alert-danger d-none' id='error_banner'>
@@ -55,20 +51,12 @@
   <form class='signUp'>
     <div class='form-group'>
       <label for='firstName'>Name</label>
-      <input
-        type='text'
-        class='form-control'
-        id='name_signup'
-      />
+      <input type='text' class='form-control' id='name_signup' />
     </div>
 
     <div class='form-group'>
       <label for='email'>Email</label>
-      <input
-        type='email'
-        class='form-control'
-        id='email_signup'
-      />
+      <input type='email' class='form-control' id='email_signup' />
     </div>
 
     <div class='form-group'>
