--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -1,4 +1,4 @@
-<div class='container main-margin'>
+<div id='div-content' class='container main-margin'>
   <div class='row justify-content-evenly'>
     <div class='col-12 col-sm-12 px-0'>
       <div class='card border-light mb-3'>
