--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,5 @@
 <footer class="footer bg-light py-5">
-  <div class="container text-center">
+  <div id='div-content' class="container text-center">
       <!-- <figure class="mb-4">
           <img src="#" alt="Logo" class="img-fluid">
       </figure> -->
