--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,20 +3,22 @@
     <a
       href='/recipe/{{recipe.id}}'
       class='feed rounded-4 mx-auto mb-3 my-3'
-      style='display: block; max-width: 650px; width: 100%; text-align: left;'
+      style='display: block; max-width: 650px; width: 100%; text-align: center;'
     >
       <div class='row g-0'>
         <div class='col-md-12'>
           <img
             src='{{recipe.imagePath}}'
-            class='img-fluid rounded-start'
+            class='img-fluid rounded'
+             style='width:100%; height:100%'
             alt='Pic of food'
           />
         </div>
-        <div class='col-md-8'>
+        <div class='col-md-12 mb-4'>
           <div class='card-body1'>
-            <h1 class='card-title'>{{recipe.title}}</h1>
+            <h2 class='card-title'>{{recipe.title}}</h2>
             <p class='card-text text-body-secondary'>{{recipe.description}}</p>
+          </div>
           </div>
         </div>
       </div>
