--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,7 +1,7 @@
 <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-              <img src="#" alt="small logo" width="50" height="50">   
+              <img src="/images/logo.png" alt="small logo" width="50" height="50">   
               <a class="navbar-brand fw-bolder fs-2" href="/">RecipeBox</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
