--- a/views/recipe-details.handlebars
+++ b/views/recipe-details.handlebars
@@ -7,8 +7,8 @@
           <div class='col-md-6'>
             <img
               src='{{recipe.imagePath}}'
-              class='img-fluid rounded-start'
-              alt='...'
+              class='img-fluid rounded'
+              alt='recipe-image'
             />
           </div>
            <div class='col-md-6'>
@@ -17,7 +17,7 @@
                 class='my-3'
                 class='font-monospace card-title'
               >{{recipe.title}}</h2>
-              <p class='fw-light card-text'>{{recipe.description}}</p>
+              <p class='fw-light fs-5'>{{recipe.description}}</p>
               <h6 class='card-subtitle text-body-secondary'>Published:
                 {{format_date recipe.dateCreated}}</h6>
               <h6 class='my-3'>By :</h6>
@@ -50,10 +50,10 @@
         </div>
       </div>
     </div>
-    <hr class='mt-3' />
+    <hr class='mt-1' />
     {{! ============================Ingredients========================== }}
     <div
-      class='bg-light-subtle shadow-sm p-3 mb-5 bg-body-tertiary rounded col-12 col-sm-6'
+      class='bg-light-subtle shadow-sm p-3 mb-3 bg-body-tertiary rounded col-12 col-sm-6'
     >
       <h4 class='px-3 mb-3'>Ingredients</h4>
       <textarea
@@ -62,7 +62,7 @@
     </div>
     {{! ============================Instructions========================== }}
     <div
-      class='bg-light-subtle shadow-sm p-3 mb-5 bg-body-tertiary rounded col-12 col-sm-6'
+      class='bg-light-subtle shadow-sm p-3 mb-3 bg-body-tertiary rounded col-12 col-sm-6'
     >
 
       <h4 class='px-3 mb-3'>Instructions</h4>
@@ -70,6 +70,7 @@
         class='px-3 py-3 textarea resize-instructions'
       >{{recipe.instructions}}</textarea>
     </div>
+    <hr class='' />
     {{! ============================Comment========================== }}
     <div
       class='bg-light-subtle shadow-sm p-3 mb-5 bg-body-tertiary rounded col-12 col-sm-12'
