changed the size of titles

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,7 +16,7 @@
         </div>
         <div class='col-md-12 mb-4'>
           <div class='card-body1'>
-            <h2 class='card-title'>{{recipe.title}}</h2>
+            <h3 class=''>{{recipe.title}}</h3>
             <p class='card-text text-body-secondary'>{{recipe.description}}</p>
           </div>
           </div>
