small changes all around, added readme(if you wish to change or improve it go for it), and fixed profile page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div id='div-content' class='main-margin'>
+<div id='div-content' class='main-margin mx-4'>
   <h2 class='display-4'>Login</h2>
 
   <div class='alert alert-danger d-none' id='error_banner'>
