--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,9 +25,6 @@ body {
     position: relative;
 }
 
-form {
-    /* width: 100%; */
-}
 
 form .form-group {
     display: block;
@@ -144,9 +141,6 @@ h3 {
     font-family: "Source Sans Pro", sans-serif;
 }
 
-.background-homepage {
-    /* background-color: #cad5e1; */
-}
 
 a.feed {
     background-color: white;
@@ -158,6 +152,8 @@ a.feed {
 a.feed:hover,
 a.feed:focus {
     /* background-color: #81b1e3; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
 }
 
 .card-body1 {
