--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,7 @@
     ></script>
 
     <link rel='stylesheet' href='/css/style.css' />
+    <link rel='stylesheet' href='/css/404.css' />
   </head>
 
   <body>
