as in branch title

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -33,7 +33,7 @@
 </div>
 
 <div id='div-content' class='mt-4 mx-4 border-top border-black border-3'>
-  <h2 class='display-4'>Register</h2>
+  <h2 class='display-4'>Sign Up</h2>
 
   <div class='alert alert-danger d-none' id='error_banner'>
     <button
